--- a/cryptofundhub/crypto_fund_hub/cryptofund_frontend/package.json
+++ b/cryptofundhub/crypto_fund_hub/cryptofund_frontend/package.json
@@ -10,9 +10,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "daisyui": "^5.1.6",
     "next": "15.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "react-icons": "^5.5.0",
     "thirdweb": "^5"
   },
   "devDependencies": {
