--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "author": "thirdweb <eng@thirdweb.com>",
   "license": "MIT",
   "dependencies": {
-    "@thirdweb-dev/contracts": "^3"
+    "@thirdweb-dev/contracts": "^3",
+    "@thirdweb-dev/react": "^4.9.4",
+    "@thirdweb-dev/sdk": "^4.0.99",
+    "next": "^16.1.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "scripts": {
-    "build": "npx thirdweb@latest detect",
-    "deploy": "npx thirdweb@latest deploy",
-    "release": "npx thirdweb@latest release"
-  }
+  "dev": "next dev",
+  "build": "npx thirdweb@latest detect",
+  "deploy": "npx thirdweb@latest deploy",
+  "release": "npx thirdweb@latest release"
+}
+
 }
